Sculpt Mode: Airbrush stroke type stops after initialization #74074

Closed
opened 2020-02-21 14:14:24 +01:00 by Metin Seven · 9 comments

System Information
Operating system: Windows 10 Pro 64-bit
Graphics card: NVIDIA GeForce RTX 2080 Ti

Blender Version
Broken: Blender 2.83 Alpha, February 21, 10:10:33 - 1f8f4c8cfe
Worked: 2.82

Short description of error
Sculpt Mode's Airbrush stroke type stops after initialization, while it should keep auto-adding new strokes using the Rate value.

Exact steps for others to reproduce the error

  • Initialize Sculpt Mode by Control + N, then choosing Sculpting.
  • Press the 'E' key and choose Airbrush.
  • Press and hold LMB on the mesh surface. Only one stroke is performed, then Airbrush stops.
**System Information** Operating system: Windows 10 Pro 64-bit Graphics card: NVIDIA GeForce RTX 2080 Ti **Blender Version** Broken: Blender 2.83 Alpha, February 21, 10:10:33 - 1f8f4c8cfeaf Worked: 2.82 **Short description of error** Sculpt Mode's Airbrush stroke type stops after initialization, while it should keep auto-adding new strokes using the Rate value. **Exact steps for others to reproduce the error** - Initialize Sculpt Mode by Control + N, then choosing Sculpting. - Press the 'E' key and choose Airbrush. - Press and hold LMB on the mesh surface. Only one stroke is performed, then Airbrush stops.
Author

Added subscriber: @MetinSeven-1

Added subscriber: @MetinSeven-1

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

#74075 is that the same report as this ?

#74075 is that the same report as this ?
Author

The https://developer.blender.org/T74075 report doesn't seem to be about the Airbrush stroke stopping after initialization.

The https://developer.blender.org/T74075 report doesn't seem to be about the Airbrush stroke stopping after initialization.
Member

maybe I misunderstood.

<removed> maybe I misunderstood.
Author

I can't find anything wrong with other brushes or other strokes, just the Airbrush stroke type that doesn't work, regardless of the brush type.

I can't find anything wrong with other brushes or other strokes, just the Airbrush stroke type that doesn't work, regardless of the brush type.

This issue was referenced by a489d77c5b

This issue was referenced by a489d77c5be4e2f1e7e1fac3a3271bb7bca293af
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-03-01 19:32:47 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74074
No description provided.